# rproto

./: .gitignore  CMakeLists.txt
cmake/modules/: FindDJVULibre.cmake  FindEigen3.cmake  FindGSL.cmake  FindLoki.cmake  FindQwt.cmake
lib/: CMakeLists.txt  bookfactory.cpp
lib/BOSS/boss/include/core/: base.h
lib/BOSS/boss/include/plugin/: module.h
lib/api/: baseobject.h  bookfactory.h  hresult.h  ibook.h  ilayout.h  iplugin.h  irenderer.h  iunknown.h
lib/clue_api/: CMakeLists.txt  basepoint.cpp  baserect.cpp  bookfactory.cpp  ids.cpp
lib/clue_api/include/: basepoint.h  baserect.h  bookfactory.h  ibook.h  iimagetile.h  ilayout.h  iplugin.h  ipoint.h  irect.h  irenderer.h
lib/futil/: CMakeLists.txt
lib/glue_api/: CMakeLists.txt  basepoint.cpp  baserect.cpp
lib/glue_api/include/: basepoint.h  baserect.h  forward.h  ibook.h  icontent.h  icontentnode.h  iimagetile.h  ilayout.h  iplugin.h  ipoint.h  irect.h  irenderer.h
lib/pdfium/: CMakeLists.txt
lib/plugins/djvulibre/: CMakeLists.txt  djvubook.cpp  djvubook.h  djvulistener.cpp  djvulistener.h  djvupagelayout.cpp  djvupagelayout.h  djvuplugin.cpp  djvuplugin.h  djvurenderer.cpp  djvurenderer.h  module.cpp
lib/plugins/pdfium/: CMakeLists.txt  book.cpp  book.h  ids.cpp  iinternallayout.h  imagetile.cpp  imagetile.h  layout.cpp  layout.h  library.h  plugin.cpp  plugin.h  point.h  renderer.cpp  renderer.h
lib/plugins/pdfium/pdfium/: CMakeLists.txt
lib/plugins/pdfium/src/: book.cpp  book.h  content.cpp  content.h  iinternallayout.h  imagetile.cpp  imagetile.h  layout.cpp  layout.h  library.cpp  library.h  module.cpp  plugin.cpp  plugin.h  point.h  rect.h  renderer.cpp  renderer.h
lib/util/: bitutil.h  patricia.h  refobject.h  rlucache.h  singletone.h
q5_app/: CMakeLists.txt  bookfactory.cpp  bookfactory.h  contentmodel.cpp  contentmodel.h  contentview.cpp  contentview.h  draghelper.cpp  draghelper.h  filehistorymodel.cpp  filehistorymodel.h  filehistoryview.cpp  filehistoryview.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  pagespinbox.cpp  pagespinbox.h  pageview.cpp  pageview.h
reader/: CMakeLists.txt  main.cpp  mainwindow.cpp  pageview.cpp
